@@ -1,12 +1,20 @@
 package us.hemdgang.elcliento.modules;
 
 import java.util.ArrayList;
+import java.util.Collections;
+import java.util.Comparator;
 import java.util.List;
 
+import net.minecraft.client.Minecraft;
+import net.minecraft.client.gui.FontRenderer;
+import net.minecraft.client.gui.Gui;
+import net.minecraft.client.gui.ScaledResolution;
+import net.minecraftforge.client.event.RenderGameOverlayEvent;
 import net.minecraftforge.common.MinecraftForge;
 import net.minecraftforge.fml.common.eventhandler.SubscribeEvent;
 import us.hemdgang.elcliento.ElCliento;
 import us.hemdgang.elcliento.events.KeyPressedEvent;
+import us.hemdgang.elcliento.utils.ColorUtils;
 
 public class ModuleManager {
 
@@ -88,71 +96,61 @@ public class ModuleManager {
     private class RenderArrayList {
 
 	public RenderArrayList() {
-	    // EventManager.register(this);
+	    MinecraftForge.EVENT_BUS.register(this);
 	}
 
-	// public void onRender2D(Render2DEvent event) {
-	// ScaledResolution scaledresolution = new ScaledResolution(Minecraft.getMinecraft());
-	// Minecraft.getMinecraft().entityRenderer.setupOverlayRendering();
-	// GlStateManager.enableBlend();
-	//
-	// // LUNACY
-	// if (ClientConfig.isEnabled() && ClientConfig.getArraylistMode() != 0) {
-	//
-	// // ARRAY LIST
-	// renderArrayList(scaledresolution);
-	// }
+	@SubscribeEvent
+	public void onRender2D(RenderGameOverlayEvent.Chat event) {
+	    ScaledResolution scaledresolution = new ScaledResolution(Minecraft.getMinecraft());
 
-	// private void renderArrayList(ScaledResolution resolution) {
-	// resolution.getScaledWidth();
-	// resolution.getScaledHeight();
-	// final FontRenderer fr = Minecraft.getMinecraft().fontRendererObj;
-	//
-	// // MODULE NAMES
-	// List<String> display = new ArrayList();
-	// for (Module module : ModuleManager.getModuleList()) {
-	// if (module.isEnabled()) {
-	// display.add(String.valueOf(module.getName()));
-	// }
-	// }
-	//
-	// // SORT
-	// Collections.sort(display, new Comparator<String>() {
-	// @Override
-	// public int compare(String m1, String m2) {
-	// if (fr.getStringWidth(m1) > fr.getStringWidth(m2)) {
-	// return -1;
-	// }
-	// if (fr.getStringWidth(m1) < fr.getStringWidth(m2)) {
-	// return 1;
-	// }
-	// return 0;
-	// }
-	// });
+	    renderArrayList(scaledresolution);
+	}
 
-	// // RENDER
-	// int i = 0;
-	// for (String string : display) {
-	// int width = fr.getStringWidth(string);
-	// int posX = resolution.getScaledWidth() - width - 2;
-	// int posY = 10 * i + 2;
-	//
-	// if (ClientConfig.getArraylistMode() >= 3) {
-	// if (i == 0) {
-	// Gui.drawRect(posX - 2, posY - 2, posX + width + 2, posY + 9, 0xEE252838);
-	// } else {
-	// Gui.drawRect(posX - 2, posY - 1, posX + width + 2, posY + 9, 0xEE252838);
-	// }
-	// }
-	// if (ClientConfig.getArraylistMode() == 1 || ClientConfig.getArraylistMode() == 3) {
-	// fr.drawString(string, posX, posY, ColorUtils.rainbowEffect(200000000L, 1.0F).getRGB());
-	// } else if (ClientConfig.getArraylistMode() == 2 || ClientConfig.getArraylistMode() == 4) {
-	// fr.drawStringWithShadow(string, posX, posY, ColorUtils.rainbowEffect(200000000L, 1.0F).getRGB());
-	// }
-	// i++;
-	// }
-	// display.clear();
-	// GL11.glColor4f(1F, 1F, 1F, 1F);
-	// }
+	private void renderArrayList(ScaledResolution resolution) {
+	    resolution.getScaledWidth();
+	    resolution.getScaledHeight();
+	    final FontRenderer fr = Minecraft.getMinecraft().fontRenderer;
+
+	    // MODULE NAMES
+	    List<String> display = new ArrayList();
+	    for (Module module : ModuleManager.getModuleList()) {
+		if (module.isEnabled()) {
+		    display.add(String.valueOf(module.getName()));
+		}
+	    }
+
+	    // SORT
+	    Collections.sort(display, new Comparator<String>() {
+		@Override
+		public int compare(String m1, String m2) {
+		    if (fr.getStringWidth(m1) > fr.getStringWidth(m2)) {
+			return -1;
+		    }
+		    if (fr.getStringWidth(m1) < fr.getStringWidth(m2)) {
+			return 1;
+		    }
+		    return 0;
+		}
+	    });
+
+	    // RENDER
+	    int i = 0;
+	    for (String string : display) {
+		int width = fr.getStringWidth(string);
+		int posX = resolution.getScaledWidth() - width - 2;
+		int posY = 10 * i + 2;
+
+		if (i == 0) {
+
+		    Gui.drawRect(posX - 2, posY - 2, posX + width + 2, posY + 9, 0xEE252838);
+		} else {
+		    Gui.drawRect(posX - 2, posY - 1, posX + width + 2, posY + 9, 0xEE252838);
+		}
+
+		fr.drawString(string, posX, posY, ColorUtils.rainbowEffect());
+		i++;
+	    }
+	    display.clear();
+	}
     }
 }
